--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    container_name: go-practice
+    container_name: go-play
     build: .
     working_dir: /code
     ports:
